2008-08-14  Jonathan Pryor  <jpryor@novell.com>

	* mktuples: Change method parameter names to please Gendarme.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Tests/Mono.Rocks.Tests.csproj: Add additional tests.
	* Mono.Rocks.sln: Add doc/doc.mdproj to the build.
	* doc/doc.mdproj: Added; project file to build documentation.
	* doc/ndesk-options-docs.source: Renamed to doc/mono-rocks-docs.source.
	* lib/mono-rocks, lib/monodoc/sources: Added.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj: Add Mono.Rocks/Stream.cs to the build.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/StreamRocks.xml: Added; stubs for
	  Mono.Rocks.StreamRocks.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources: Add Mono.Rocks/Stream.cs to the build.
	* Mono.Rocks.Tests.dll.sources: Add Tests/Mono.Rocks.Tests/StreamTest.cs 
	  to the build.

2008-08-05  Jonathan Pryor  <jpryor@novell.com>

	* . (svn:ignore): Ignore generated files.
	* archive: Added; ignore generated files.
	* doc/**: Added; documentation stubs, Makefile.include to update the docs
	  and generate an HTML version of the output, etc.
	* ChangeLog: Added.
	* Makefile: include doc/Makefile.include to allow documentation generation.
