@@ -1,5 +1,7 @@
 ./Tests/Mono.Rocks.Tests/AssemblyInfo.cs
+./Tests/Mono.Rocks.Tests/Int16Test.cs
 ./Tests/Mono.Rocks.Tests/Int32Test.cs
+./Tests/Mono.Rocks.Tests/Int64Test.cs
 ./Tests/Mono.Rocks.Tests/BaseRocksFixture.cs
 ./Tests/Mono.Rocks.Tests/KeyValuePairTest.cs
 ./Tests/Mono.Rocks.Tests/NaturalStringComparerTest.cs
@@ -10,3 +12,6 @@
 ./Tests/Mono.Rocks.Tests/IEnumerableTest.cs
 ./Tests/Mono.Rocks.Tests/ICustomAttributeProviderTest.cs
 ./Tests/Mono.Rocks.Tests/TuplesTest.cs
+./Tests/Mono.Rocks.Tests/UInt16Test.cs
+./Tests/Mono.Rocks.Tests/UInt32Test.cs
+./Tests/Mono.Rocks.Tests/UInt64Test.cs
