@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Mono.Rocks</RootNamespace>
     <AssemblyName>Mono.Rocks</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -41,7 +41,9 @@
     <Compile Include="Mono.Rocks\Check.cs" />
     <Compile Include="Mono.Rocks\ICustomAttributeProvider.cs" />
     <Compile Include="Mono.Rocks\IEnumerable.cs" />
+    <Compile Include="Mono.Rocks\Int16.cs" />
     <Compile Include="Mono.Rocks\Int32.cs" />
+    <Compile Include="Mono.Rocks\Int64.cs" />
     <Compile Include="Mono.Rocks\KeyValuePair.cs" />
     <Compile Include="Mono.Rocks\NaturalStringComparer.cs" />
     <Compile Include="Mono.Rocks\Sequence.cs" />
@@ -50,6 +52,9 @@
     <Compile Include="Mono.Rocks\TextReader.cs" />
     <Compile Include="Mono.Rocks\Tuple.cs" />
     <Compile Include="Mono.Rocks\Tuples.cs" />
+    <Compile Include="Mono.Rocks\UInt16.cs" />
+    <Compile Include="Mono.Rocks\UInt32.cs" />
+    <Compile Include="Mono.Rocks\UInt64.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
@@ -59,4 +64,11 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <GtkDesignInfo gtkVersion="2.12.1" />
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
