@@ -1,3 +1,9 @@
+2008-08-17  Jonathan Pryor  <jpryor@novell.com>
+
+	* Int16Test.cs, Int64Test.cs, UInt16Test.cs, UInt32Test.cs, UInt64Test.cs: 
+	  Added; tests for .IsEven() and .IsOdd() on short, ushort, uint, long, ulong.
+	* Int32Test.cs: Add tests for .IsEven() and .IsOdd().
+
 2008-08-14  Bojan Rajkovic  <bojanr@brandeis.edu.
 
 	* StringTest.cs: Added tests for regex convenience extension methods.
