@@ -1,3 +1,10 @@
+2008-08-17  Jonathan Pryor  <jpryor@novell.com>
+
+	* Mono.Rocks.csproj, Mono.Rocks.dll.sources: Add Int16.cs, Int64.cs,
+	  UInt16.cs, UInt32.cs, UInt64.cs to the build.
+	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
+	  Int16Test.cs, Int64Test.cs, UInt16Test.cs, UInt32Test.cs, UInt64Test.cs.
+
 2008-08-14  Jonathan Pryor  <jpryor@novell.com>
 
 	* mktuples: Change method parameter names to please Gendarme.
